@@ -1,3 +1,6 @@
+tag-0.0-20210313 PE
+  - Add more information to the course descriptions and format in HTML.
+
 tag-0.0-20201126 JP
   - Name files consistently route_training_v3
 
